Issue #32: Colour percentage covered based on the percent value

--- a/src/style.css
+++ b/src/style.css
@@ -159,5 +159,4 @@ span.percentage_covered {
 	padding-bottom: 0.6em;
 	padding-left: 0.8em;
 	margin: 0.05em;
-	background-color: #f071b0;
 }
